--- a/charts/cronjobs/templates/cronjob.yaml
+++ b/charts/cronjobs/templates/cronjob.yaml
@@ -98,6 +98,13 @@ spec:
                 - name: {{ $key }}
                   value: {{ $value | quote }}
                 {{- end }}
+                {{- range $s := $job.secretEnvFrom }}
+                - name: {{ $s.name }}
+                  valueFrom:
+                    secretKeyRef:
+                      name: {{ $s.secretName }}
+                      key: {{ $s.key }}
+                {{- end }}
               resources:
                 {{- toYaml $job.resources | nindent 16 }}
               volumeMounts:
@@ -184,6 +191,11 @@ spec:
             - name: {{ $job_name }}
               secret:
                 secretName: {{ print $chart_name "-" $job_name }}
+            {{- end }}
+            {{- range $job_name, $secret := $job.secretEnvFrom | default $.Values.secretEnvFrom }}
+            - name: {{ $secret.secretName }}
+              secret:
+                secretName: {{ $secret.secretName }}
             {{- end }}
 {{- end }} {{/* # end if check $job */}}
 {{- end }} {{/* # end range $job */}}
