--- a/charts/cronjobs/templates/secrets.yaml
+++ b/charts/cronjobs/templates/secrets.yaml
@@ -52,9 +52,9 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "cronjobs.fullname" . }}-{{ $job_name }}-envvars
+  name: {{ include "cronjobs.fullname" $ }}-{{ $job_name }}-envvars
   labels:
-    {{- include "cronjobs.labels" . | nindent 4 }}
+    {{- include "cronjobs.labels" $ | nindent 4 }}
     {{- with $.Values.commonLabels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
