--- a/charts/cronjobs/templates/secrets.yaml
+++ b/charts/cronjobs/templates/secrets.yaml
@@ -44,3 +44,29 @@ data:
   {{ $name }}: {{ $.Files.Get $path | b64enc | quote }}
   {{- end }}
 {{- end }}
+
+{{- range $job_name, $job := .Values.jobs }}
+{{- if and $job (hasKey $job "secretEnv") $job.secretEnv }}
+{{- $checksum := toYaml $job.secretEnv | sha256sum | trunc 20 }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "cronjobs.fullname" $ }}-{{ $job_name }}-envvars
+  labels:
+    {{- include "cronjobs.labels" $ | nindent 4 }}
+    {{- with $.Values.commonLabels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+  annotations:
+    checksum/secret: {{ $checksum | quote }}
+    {{- with $.commonAnnotations }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+type: Opaque
+data:
+  {{- range $name, $value := $job.secretEnv }}
+  {{ $name }}: {{ $value | b64enc | quote }}
+  {{- end }}
+{{- end }} {{/* # end exists extraFiles */}}
+{{- end }} {{/* # end range jobs */}}
