--- a/charts/cronjobs/templates/secrets.yaml
+++ b/charts/cronjobs/templates/secrets.yaml
@@ -52,7 +52,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "cronjobs.fullname" $ }}-{{ $job_name }}-envvars
+  name: {{ include "com.klicktipp.slugify-volume-name" (list (include "cronjobs.fullname" $) $job_name "envvars") }}
   labels:
     {{- include "cronjobs.labels" $ | nindent 4 }}
     {{- with $.Values.commonLabels }}
