--- a/charts/zalando-postgres-cluster/values.yaml
+++ b/charts/zalando-postgres-cluster/values.yaml
@@ -49,7 +49,7 @@ postgres_cluster:
   #   app_admin: ["createdb"]
 
   volume:
-    enabled: true
+    enabled: false
     size: "2Gi"
     storageClass: ""  # optional; omit to use default StorageClass
 
@@ -66,7 +66,7 @@ postgres_cluster:
 
   backup:
     # operator-managed logical dumps (pg_dump/pg_dumpall style) on a cron schedule.
-    enabled: true
+    enabled: false
     schedule: "30 00 * * *"
     retention: "7 days"
 
@@ -117,8 +117,8 @@ postgres_cluster:
     # resources, such as Minikube. If you do want to specify resources, uncomment the following
     # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
     # limits:
-    #   cpu: 100m
-    #   memory: 128Mi
+    #   cpu: 250m
+    #   memory: 256Mi
     # requests:
     #   cpu: 100m
     #   memory: 128Mi
