--- a/charts/rabbitmq-cluster/templates/ingress.yaml
+++ b/charts/rabbitmq-cluster/templates/ingress.yaml
@@ -1,27 +1,45 @@
+{{- if .Values.ingress.enabled -}}
 ---
 # ingress
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  name: {{ include "rabbitmq-cluster.fullname" . }}
+  labels:
+    {{- include "rabbitmq-cluster.labels" . | nindent 4 }}
+  {{- with .Values.ingress.annotations }}
   annotations:
-    cert-manager.io/cluster-issuer: zerossl-prod
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-  name: airbyte-rabbitmq
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
-  ingressClassName: nginx
+  {{- with .Values.ingress.className }}
+  ingressClassName: {{ . }}
+  {{- end }}
+  {{- if .Values.ingress.tls }}
+  tls:
+    {{- range .Values.ingress.tls }}
+    - hosts:
+        {{- range .hosts }}
+        - {{ . | quote }}
+        {{- end }}
+      secretName: {{ .secretName }}
+    {{- end }}
+  {{- end }}
   rules:
-    - host: airbyte-rabbitmq.{{ .Values.env.name }}.ktsys.cloud
+    {{- range .Values.ingress.hosts }}
+    - host: {{ .host | quote }}
       http:
         paths:
-          - backend:
+          {{- range .paths }}
+          - path: {{ .path }}
+            {{- with .pathType }}
+            pathType: {{ . }}
+            {{- end }}
+            backend:
               service:
-                name: airbyte-rabbitmq
+                name: {{ include "rabbitmq-cluster.fullname" $ }}
                 port:
                   name: management
-            path: /
-            pathType: Prefix
-  tls:
-    - hosts:
-        - airbyte-rabbitmq.{{ .Values.env.name }}.ktsys.cloud
-      secretName: airbyte-rabbitmq.{{ .Values.env.name }}.ktsys.cloud-tls
+          {{- end }}
+    {{- end }}
+{{- end }}
