--- a/charts/rabbitmq-cluster/templates/poddisruptionbudget.yaml
+++ b/charts/rabbitmq-cluster/templates/poddisruptionbudget.yaml
@@ -1,11 +1,19 @@
+{{- if .Values.pdb.enabled }}
 ---
 # pod disruption budget
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
-  name: airbyte-rabbitmq
+  name: {{ include "rabbitmq-cluster.fullname" . }}
+  labels:
+    {{- include "rabbitmq-cluster.labels" . | nindent 4 }}
 spec:
-  maxUnavailable: 1
+  {{- if kindIs "string" .Values.pdb.maxUnavailable }}
+  maxUnavailable: "{{ .Values.pdb.maxUnavailable }}"
+  {{- else }}
+  maxUnavailable: {{ .Values.pdb.maxUnavailable }}
+  {{- end }}
   selector:
     matchLabels:
       app.kubernetes.io/name: airbyte-rabbitmq
+{{- end }}
