--- a/charts/rabbitmq-cluster/templates/rabbitmqusers.yaml
+++ b/charts/rabbitmq-cluster/templates/rabbitmqusers.yaml
@@ -1,41 +1,41 @@
-# {{- range $user := .Values.rabbitmq.users }}
-# users
----
-apiVersion: rabbitmq.com/v1beta1
-kind: User
-metadata:
-  name: {{ .name }}
-  annotations:
-    # Workaround to trigger a re-creation of the user / setting the password, comment out if not needed
-    updateTimestamp: {{ now | date "2006-01-02T15:04:05Z07:00" }}
-spec:
-  tags: []
-  rabbitmqClusterReference:
-    name: {{ $.Values.rabbitmq.cluster.name}}
-  importCredentialsSecret:
-    name: {{ $.Values.rabbitmq.cluster.name}}-user-{{ .name }}
----
-# user credentials
-apiVersion: v1
-kind: Secret
-metadata:
-  name: {{ $.Values.rabbitmq.cluster.name}}-user-{{ .name }}
-data:
-  username: {{ .name | b64enc | quote }}
-  password: {{ .password | b64enc | quote }}
----
-# user permissions
-apiVersion: rabbitmq.com/v1beta1
-kind: Permission
-metadata:
-  name: {{ .name }}
-spec:
-  vhost: {{ $.Values.rabbitmq.queue_config.vhost | quote }}
-  user: {{ .name }}
-  permissions:
-    write: ".*"
-    configure: ".*"
-    read: ".*"
-  rabbitmqClusterReference:
-    name: {{ $.Values.rabbitmq.cluster.name}}
-# {{- end }}
+{{/*# {{- range $user := .Values.rabbitmq.users }}*/}}
+{{/*# users*/}}
+{{/*---*/}}
+{{/*apiVersion: rabbitmq.com/v1beta1*/}}
+{{/*kind: User*/}}
+{{/*metadata:*/}}
+{{/*  name: {{ .name }}*/}}
+{{/*  annotations:*/}}
+{{/*    # Workaround to trigger a re-creation of the user / setting the password, comment out if not needed*/}}
+{{/*    updateTimestamp: {{ now | date "2006-01-02T15:04:05Z07:00" }}*/}}
+{{/*spec:*/}}
+{{/*  tags: []*/}}
+{{/*  rabbitmqClusterReference:*/}}
+{{/*    name: {{ $.Values.rabbitmq.cluster.name}}*/}}
+{{/*  importCredentialsSecret:*/}}
+{{/*    name: {{ $.Values.rabbitmq.cluster.name}}-user-{{ .name }}*/}}
+{{/*---*/}}
+{{/*# user credentials*/}}
+{{/*apiVersion: v1*/}}
+{{/*kind: Secret*/}}
+{{/*metadata:*/}}
+{{/*  name: {{ $.Values.rabbitmq.cluster.name}}-user-{{ .name }}*/}}
+{{/*data:*/}}
+{{/*  username: {{ .name | b64enc | quote }}*/}}
+{{/*  password: {{ .password | b64enc | quote }}*/}}
+{{/*---*/}}
+{{/*# user permissions*/}}
+{{/*apiVersion: rabbitmq.com/v1beta1*/}}
+{{/*kind: Permission*/}}
+{{/*metadata:*/}}
+{{/*  name: {{ .name }}*/}}
+{{/*spec:*/}}
+{{/*  vhost: {{ $.Values.rabbitmq.queue_config.vhost | quote }}*/}}
+{{/*  user: {{ .name }}*/}}
+{{/*  permissions:*/}}
+{{/*    write: ".*"*/}}
+{{/*    configure: ".*"*/}}
+{{/*    read: ".*"*/}}
+{{/*  rabbitmqClusterReference:*/}}
+{{/*    name: {{ $.Values.rabbitmq.cluster.name}}*/}}
+{{/*# {{- end }}*/}}
