--- a/charts/rabbitmq-cluster/templates/poddisruptionbudget.yaml
+++ b/charts/rabbitmq-cluster/templates/poddisruptionbudget.yaml
@@ -15,5 +15,5 @@ spec:
   {{- end }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: airbyte-rabbitmq
+      {{- include "rabbitmq-cluster.selectorLabels" . | nindent 6 }}
 {{- end }}
