Add ServiceMonitor support for RabbitMQ cluster monitoring

--- a/charts/rabbitmq-cluster/values.yaml
+++ b/charts/rabbitmq-cluster/values.yaml
@@ -29,6 +29,9 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
+monitoring:
+  serviceMonitor:
+    enabled: false
 
 rabbitmq:
   cluster:
