--- a/charts/rabbitmq-cluster/templates/rabbitmqcluster.yaml
+++ b/charts/rabbitmq-cluster/templates/rabbitmqcluster.yaml
@@ -24,6 +24,7 @@ spec:
   affinity:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+  terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds | int }}
   rabbitmq:
     additionalPlugins:
       {{- $additionalPlugins := .Values.rabbitmq.cluster.additionalPlugins | default (list) }}
