Refactor user VHost configuration and permission handling in RabbitMQ Cluster chart

--- a/charts/rabbitmq-cluster/templates/users.yaml
+++ b/charts/rabbitmq-cluster/templates/users.yaml
@@ -1,6 +1,10 @@
 ---
 {{- $clusterRef := .Values.rabbitmq.cluster.name | default (include "rabbitmq-cluster.fullname" .) }}
-{{- $defaultVhost := (default "/" .Values.rabbitmq.vhost) }}
+
+{{- $vhost := "/" }}
+{{- if $.Values.rabbitmq.vhost.enabled }}
+  {{- $vhost = (.Values.rabbitmq.vhost.name | default (include "rabbitmq-cluster.fullname" .)) }}
+{{- end }}
 
 {{- range $user := .Values.rabbitmq.users }}
 {{- $tags := $user.tags | default (list) }}
@@ -35,7 +39,6 @@ stringData:
 
 {{- $permission := $user.permission | default (dict) }}
 {{- if $permission.enabled | default true }}
-{{- $permissionVhost := $permission.vhost | default "/" }}
 {{- $permissionName := $permission.name | default $permissionVhost }}
 ---
 apiVersion: rabbitmq.com/v1beta1
@@ -43,7 +46,7 @@ kind: Permission
 metadata:
   name: {{ printf "%s-%s-%s" $clusterRef $user.name $permissionName | include "com.klicktipp.slugify-string" | quote }}
 spec:
-  vhost: {{ $permissionVhost | quote }}
+  vhost: {{ $permission.vhost | default $vhost | quote }}
   userReference:
     name: {{ printf "%s-%s" $clusterRef $user.name | include "com.klicktipp.slugify-string" | quote }}
   permissions:
