--- a/charts/rabbitmq-cluster/Chart.yaml
+++ b/charts/rabbitmq-cluster/Chart.yaml
@@ -3,8 +3,8 @@ apiVersion: v2
 name: rabbitmq-cluster
 description: Helm chart to define a RabbitMQ cluster via official rabbitmq.com CRDs (RabbitmqCluster).
 type: application
-version: 0.2.0
-appVersion: "4.1"
+version: 1.0.0
+appVersion: "4.2-management"
 kubeVersion: ">= 1.33.0-0"
 home: https://www.rabbitmq.com/kubernetes/operator/operator-overview.html
 sources:
