Add capability check for ServiceMonitor in monitoring conditional

--- a/charts/rabbitmq-cluster/templates/servicemonitor.yaml
+++ b/charts/rabbitmq-cluster/templates/servicemonitor.yaml
@@ -1,5 +1,5 @@
 ---
-{{- if .Values.monitoring.serviceMonitor.enabled }}
+{{- if and .Values.monitoring.serviceMonitor.enabled (.Capabilities.APIVersions.Has "monitoring.coreos.com/v1") }}
 
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
