Add delayStartSeconds configuration option to RabbitMQ cluster template

--- a/charts/rabbitmq-cluster/templates/rabbitmqcluster.yaml
+++ b/charts/rabbitmq-cluster/templates/rabbitmqcluster.yaml
@@ -16,6 +16,7 @@ spec:
     storageClassName: {{ .Values.rabbitmq.cluster.persistence.storageClassName | quote }}
     {{- end }}
   {{- end }}
+  delayStartSeconds: {{ .Values.rabbitmq.cluster.delayStartSeconds | int }}
   {{- with .Values.rabbitmq.cluster.resources }}
   resources:
     {{- toYaml . | nindent 4 }}
