Overrides for the RabbitmqCluster spec (e.g., for StatefulSet annotations)

--- a/charts/rabbitmq-cluster/templates/rabbitmqcluster.yaml
+++ b/charts/rabbitmq-cluster/templates/rabbitmqcluster.yaml
@@ -33,4 +33,8 @@ spec:
       {{- range (concat $additionalPlugins $extraPlugins | uniq) }}
       - {{ . | quote }}
       {{- end }}
+  {{- with .Values.rabbitmq.cluster.override }}
+  override:
+    {{- nindent 4 (toYaml .) }}
+  {{- end }}
 {{- end }}
