--- a/charts/rabbitmq-cluster/templates/topology.yaml
+++ b/charts/rabbitmq-cluster/templates/topology.yaml
@@ -57,7 +57,7 @@ spec:
 ---
 {{- $binding :=  $queue.binding | default (dict) }}
 {{- $routingKey := $binding.routingKey | default "" }}
-{{- if $binding }}
+{{- if ($binding.enabled | default true) }}
 apiVersion: rabbitmq.com/v1beta1
 kind: Binding
 metadata:
@@ -77,4 +77,41 @@ spec:
 {{- end }}  {{/* END binding */}}
 
 {{- end }} {{/* END queue loop */}}
+
+{{- range $i, $policy := (.Values.rabbitmq.topology.policies | default (list)) }}
+---
+{{- $policyVhost := $policy.vhost | default $vhost }}
+{{- $policyName := required (printf "rabbitmq.policies.items[%d].name is required" $i) $policy.name }}
+{{- $pattern := required (printf "rabbitmq.policies.items[%d].pattern is required" $i) $policy.pattern }}
+{{- $applyTo := required (printf "rabbitmq.policies.items[%d].applyTo is required" $i) $policy.applyTo }}
+{{- $definition := required (printf "rabbitmq.policies.items[%d].definition is required" $i) $policy.definition }}
+apiVersion: rabbitmq.com/v1beta1
+kind: Policy
+metadata:
+  name: {{ (printf "%s-%s-%s" $clusterRef $policyVhost $policyName) | include "com.klicktipp.slugify-string" | quote }}
+  labels:
+    {{- include "rabbitmq-cluster.labels" $ | nindent 4 }}
+    {{- with $policy.labels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+  {{- with $policy.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+spec:
+  name: {{ $policyName | quote }}
+  vhost: {{ $policyVhost | quote }}
+  pattern: {{ $pattern | quote }} # Regular expression used to match exchange or queue names.
+  applyTo: {{ $applyTo | quote }}
+  priority: {{ $policy.priority | default 0 }}
+  definition:
+    {{- toYaml $definition | nindent 4 }}
+  rabbitmqClusterReference:
+    {{- if $policy.rabbitmqClusterReference }}
+    {{- toYaml $policy.rabbitmqClusterReference | nindent 4 }}
+    {{- else }}
+    name: {{ $clusterRef | quote }}
+    {{- end }}
+{{- end }} {{/* END policies loop */}}
+
 {{- end }} {{/* END if enabled */}}
