--- a/charts/rabbitmq-cluster/templates/topology.yaml
+++ b/charts/rabbitmq-cluster/templates/topology.yaml
@@ -22,7 +22,7 @@
 apiVersion: rabbitmq.com/v1beta1
 kind: Queue
 metadata:
-  name: {{ $queue.name | include "com.klicktipp.slugify-string" | quote }}
+  name: {{ (printf "%s-%s-%s" $clusterRef $vhost $queue.name) | include "com.klicktipp.slugify-string" | quote }}
   labels:
     {{- include "rabbitmq-cluster.labels" $ | nindent 4 }}
 spec:
@@ -42,7 +42,7 @@ spec:
 apiVersion: rabbitmq.com/v1beta1
 kind: Exchange
 metadata:
-  name: {{ $exchangeName | quote }}
+  name: {{ (printf "%s-%s-%s" $clusterRef $vhost $exchangeName) | include "com.klicktipp.slugify-string" | quote }}
   labels:
     {{- include "rabbitmq-cluster.labels" $ | nindent 4 }}
 spec:
@@ -56,12 +56,13 @@ spec:
 
 ---
 {{- $binding :=  $queue.binding | default (dict) }}
+{{- $bindingName := $binding.name | default $queue.name }}
 {{- $routingKey := $binding.routingKey | default "" }}
 {{- if ($binding.enabled | default true) }}
 apiVersion: rabbitmq.com/v1beta1
 kind: Binding
 metadata:
-  name: {{ $queue.name | include "com.klicktipp.slugify-string" | quote }}
+  name: {{ (printf "%s-%s-%s" $clusterRef $vhost $bindingName) | include "com.klicktipp.slugify-string" | quote }}
   labels:
     {{- include "rabbitmq-cluster.labels" $ | nindent 4 }}
 spec:
@@ -80,7 +81,6 @@ spec:
 
 {{- range $i, $policy := (.Values.rabbitmq.topology.policies | default (list)) }}
 ---
-{{- $policyVhost := $policy.vhost | default $vhost }}
 {{- $policyName := required (printf "rabbitmq.policies.items[%d].name is required" $i) $policy.name }}
 {{- $pattern := required (printf "rabbitmq.policies.items[%d].pattern is required" $i) $policy.pattern }}
 {{- $applyTo := required (printf "rabbitmq.policies.items[%d].applyTo is required" $i) $policy.applyTo }}
@@ -88,7 +88,7 @@ spec:
 apiVersion: rabbitmq.com/v1beta1
 kind: Policy
 metadata:
-  name: {{ (printf "%s-%s-%s" $clusterRef $policyVhost $policyName) | include "com.klicktipp.slugify-string" | quote }}
+  name: {{ (printf "%s-%s-%s" $clusterRef $vhost $policyName) | include "com.klicktipp.slugify-string" | quote }}
   labels:
     {{- include "rabbitmq-cluster.labels" $ | nindent 4 }}
     {{- with $policy.labels }}
@@ -100,7 +100,7 @@ metadata:
   {{- end }}
 spec:
   name: {{ $policyName | quote }}
-  vhost: {{ $policyVhost | quote }}
+  vhost: {{ $vhost | quote }}
   pattern: {{ $pattern | quote }} # Regular expression used to match exchange or queue names.
   applyTo: {{ $applyTo | quote }}
   priority: {{ $policy.priority | default 0 }}
