--- a/charts/rabbitmq-cluster/templates/monitoring.yaml
+++ b/charts/rabbitmq-cluster/templates/monitoring.yaml
@@ -86,6 +86,18 @@ spec:
             summary: "RabbitMQ fallback queue has messages"
             description: "Queue {{ $queue.name }} has {{`{{`}} $value {{`}}`}} messages (> 0)."
 
+        - alert: RabbitMQQueueHighBacklog
+          expr: |
+            max(
+              rabbitmq_detailed_queue_messages{queue={{ $queue.name | quote }}}
+            ) > 1000
+          for: 5m
+          labels:
+            severity: critical
+          annotations:
+            summary: "RabbitMQ fallback queue backlog is critical"
+            description: "Queue {{ $queue.name }} has {{`{{`}} $value {{`}}`}} messages (> 1000). Immediate action required."
+
 {{- end }} {{/* END if alert_when_has_messages enabled */}}
 {{- end }} {{/* END queue loop */}}
 
