Optimize WAL backup configuration and improve flexibility in Zalando Postgres chart

--- a/charts/zalando-postgres-cluster/templates/secrets.yaml
+++ b/charts/zalando-postgres-cluster/templates/secrets.yaml
@@ -7,6 +7,10 @@ metadata:
   name: {{ (printf "%s-wal-aws-creds" $clusterName ) | quote }}
 type: Opaque
 stringData:
-  aws_access_key_id: {{ required "postgres_cluster.wal.credentials.accessKeyId is required when wal.enabled=true" .Values.postgres_cluster.wal.accessKeyId | quote }}
-  aws_secret_access_key: {{ required "postgres_cluster.wal.credentials.secretAccessKey is required when wal.enabled=true" .Values.postgres_cluster.wal.secretAccessKey | quote }}
+  {{- if .Values.postgres_cluster.wal.accessKeyId }}
+  aws_access_key_id: {{ .Values.postgres_cluster.wal.accessKeyId | quote }}
+  {{- end }}
+  {{- if .Values.postgres_cluster.wal.secretAccessKey}}
+  aws_secret_access_key: {{ .Values.postgres_cluster.wal.secretAccessKey | quote }}
+  {{- end }}
 {{- end -}}
